# KitCxx

./: .gitignore  Project.toml  README.md  main.jl
c/: a.out  libkit.c
c++/: libkit.cpp
deprecated/: deprecated.cpp  test.jl
deprecated/cxx extern/: libkit.cpp  libkit.h
deprecated/pure c/: libkit.c  test.c
dev/: main.cpp  test.jl
lib/: CMakeLists.txt  hello.jl  libkit.cpp
lib/c/: libkit.h
lib/c++/: hello.jl
src/: KitCxx.jl
test/: runtests.jl
